<resources>
    <string name="app_name">ArtShare</string>
    <string name="button_addArt">Add This Art</string>
    <string name="hint_artTitle">Artwork Title</string>
    <string name="hint_artDescription">Describe your piece here (optional)</string>
    <string name="menu_create">Add Artwork</string>
    <string name="menu_view">ArtShare</string>
    <string name="menu_addArt">Add</string>
    <string name="menu_cancelArt">Cancel</string>
    <string name="menu_deleteArt">Delete</string>
    <string name="sendArt">Share</string>
    <string name="action_view">View my Art</string>
    <string name="action_create">Add Artwork</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_title">ArtShare</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="enter_art_title">Please enter an Artwork Title </string>
    <string name="enter_art">Please upload your artwork first! </string>
    <string name="enter_art_type">Please choose an Artwork Type </string>
    <string name="save_art">Save This Art </string>
    <string name="save_success">Art Saved </string>
    <string name="button_addImage">Add Image </string>
    <string name="select_image">Select Artwork Image</string>
    <string name="change_image">Change Image</string>
    <string name="art_image">Artwork Image</string>
    <string name="art_type">Select Type:</string>
    <string name="date_title">Last Updated:</string>
    <string name="button_location">Add Location</string>
    <string name="location_info">If your work is of a particular location, you can specify here! This step is optional.</string>
    <string name="button_pinterest">Search similar works</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_g_maps">Map</string>
    <string name="change_button_location">Change Location</string>
    <string name="chooser_title">Choose an app to open the link.</string>
    <string name="link_error">Error opening with this application.</string>
    <string name="artError">Error : Couldn\'t Create Artwork</string>
    <string name="about_heading">About ArtShare</string>
    <string name="artsNotFound">No Artwork Yet…\nUpload some now!</string>
    <string name="likes_title">Likes</string>
    <string name="likes">0</string>
    <string name="button_editArt">Update</string>
    <string name="button_deleteArt">Delete</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="action_location">Location</string>
    <string name="about_desc">ArtShare was an app made by SETU 3rd Year student (20088744@mail.wit.ie
        ) for the purposes of an assignment in Mobile App Development 2.</string>
    <string name="about_title">About ArtShare</string>

    <!-- Firebase Resources-->

    <string name="login_title">Login or Sign Up now to get started!</string>
    <string name="signed_out">Signed out.</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="verify_email">Verify Email</string>
    <string name="create_account">Create Account</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="sign_out">Sign Out</string>
    <string name="nav_header_user">Signed in as: beckyet19@gmail.com</string>
    <string name="messageLoading"> Loading. Please Wait ...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>