<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/listFragment"
            android:icon="@drawable/ic_menu_view"
            android:title="@string/action_view" />
        <item
            android:id="@+id/createFragment"
            android:icon="@drawable/ic_menu_create"
            android:title="@string/action_create" />
        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/action_location" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about_title" />
    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/sendArt" />
        </menu>
    </item>
    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/signout"
                android:icon="@drawable/ic_menu_signout"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>