<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.artshare.activities.ArtActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dip">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:theme="@style/ArtShareToolbar"
                app:titleTextAppearance="@style/Toolbar.TitleText">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/artTitle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_artTitle"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/artImage"
                    android:layout_width="match_parent"
                    android:layout_height="79dp"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="216dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/green"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/design_default_color_on_primary"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="99dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/art_type" />

                    <Spinner
                        android:id="@+id/artType"
                        android:layout_width="194dp"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </LinearLayout>

                <EditText
                    android:id="@+id/artDescription"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_artDescription"
                    android:inputType="textMultiLine"
                    android:maxLength="250"
                    android:maxLines="5"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <Switch
                    android:id="@+id/dateOption"
                    android:layout_width="203dp"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_date"
                    android:textColor="@color/grey"
                    android:padding="20dp"/>

                <DatePicker
                    android:id="@+id/artDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:datePickerMode="spinner"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/artLocation"
                        android:layout_width="285dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@color/green"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/button_location"
                        android:textColor="@color/design_default_color_on_primary"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/infoBtn"
                        android:layout_width="53dp"
                        android:layout_height="78dp"
                        android:contentDescription="TODO"
                        app:srcCompat="@android:drawable/ic_menu_info_details" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/pink"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addArt"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/pinterestBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/dark_blue"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_pinterest"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>